# experiment-queue-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: .env.example  pyproject.toml
api/app/: config.py  main.py
api/app/domain/: enums.py  experiment.py
api/app/helpers/: airtable_helpers.py  scheduling_helpers.py
api/app/repositories/: airtable_base.py  cages_repo.py  experiments_repo.py  manipulations_repo.py  planner_repo.py
api/app/routers/: box_room.py  cages.py  calendar.py  experiments.py  scheduling.py
api/app/schemas/: __init__.py
api/app/services/: box_room_service.py  cage_availability_service.py  date_range.py  experiment_queue.py  notes_parser.py  scheduling_orchestrator.py  scheduling_service.py  syringe_color_service.py  time_estimation.py  visualization_service.py
api/tests/: conftest.py  test_api.py  test_scheduling.py
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
ui/src/: App.tsx  index.css
ui/src/__tests__/api/: boxRoom.test.ts  cages.test.ts  client.test.ts  experiments.test.ts  scheduling.test.ts
ui/src/__tests__/pages/: CageInterface.test.tsx  ExperimentQueue.test.tsx  Home.test.tsx  WeeklyCalendar.test.tsx
ui/src/api/: boxRoom.ts  cages.ts  client.ts  experiments.ts  scheduling.ts
ui/src/pages/: AddCages.tsx  AddExperiment.tsx  BoxRoom.tsx  CageInterface.tsx  EditExperiment.tsx  ExperimentQueue.tsx  Home.tsx  PlanPreview.tsx  WeeklyCalendar.tsx
ui/src/types/: index.ts
